--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
   "dependencies": {
+    "minimist": "^1.2.5",
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "lite-server": "^2.5.3",
+    "lite-server": "^2.5.4",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
   }
